...
    <string name="about">About</string>
    <string name="add_folder">Add folder</string>
    <string name="add_item">Add item</string>
    <string name="an_error_has_occurred">An error has occurred</string>
    <string name="apply">Apply</string>
...
    <string name="copy_password">Copy password</string>
    <string name="copy_username">Copy username</string>
    <string name="delete">Delete</string>
    <string name="preview">Preview</string>
    <string name="deleting">Deleting…</string>
    <string name="do_you_really_want_to_delete">Do you really want to delete? This cannot be undone.</string>
    <string name="edit">Edit</string>
    <string name="edit_folder">Edit folder</string>
    <string name="email">Email</string>
...
    <string name="master_password_required">Master password (required)</string>
    <string name="new_master_password_required">New master password (required)</string>
    <string name="more_options">More options</string>
    <string name="my_folder">My folder</string>
    <string name="my_folders">My folders</string>
...
    <string name="verify_master_password">Verify master password</string>
    <string name="verify_pin">Verify PIN</string>
    <string name="view">View</string>
    <string name="yes">Yes</string>
    <string name="account">Account</string>
...
    <string name="field_type_hidden">Hidden</string>
    <string name="field_type_linked">Linked</string>
    <string name="field_type_text">Text</string>
    <string name="select_type_field">What type of custom field do you want to add?</string>
    <string name="remove">Remove</string>
...
    <string name="autofill_and_save">Autofill and save</string>
    <string name="organization">Organization</string>
    <string name="try_again">Try again</string>
    <string name="created">Created: %1$s</string>
    <string name="password_updated">Password updated: %1$s</string>
...
    <string name="password_history">Password history</string>
    <string name="password_history_count"><annotation link="passwordHistory">Password history: <annotation arg="0">%1$s</annotation></annotation></string>
    <string name="types">Types</string>
    <string name="no_passwords_to_list">No passwords to list.</string>
    <string name="search_file_sends">Search file Sends</string>
...
    <string name="removing_send_password">Removing password</string>
    <string name="password_removed">Password removed</string>
    <string name="add_a_send">New send</string>
    <string name="copy_link">Copy link</string>
    <string name="share_link">Share link</string>
    <string name="send_link">Send link</string>
    <string name="search_sends">Search Sends</string>
    <string name="edit_send">Edit Send</string>
    <string name="edit_file_send">Edit file Send</string>
...
    <string name="you_dont_have_items_to_display">You don’t have any items to display.</string>
    <string name="empty_item_list_instruction">Add a new code to secure your accounts.</string>
    <string name="add_code">Add code</string>
    <string name="verification_code_added">Verification code added</string>
    <string name="refresh_period">Refresh period</string>
...
    <string name="copy_to_bitwarden_vault">Copy to Bitwarden vault</string>
    <string name="default_save_option">Default save option</string>
    <string name="save_to_bitwarden">Save to Bitwarden</string>
    <string name="save_here">Save here</string>
    <string name="none">None</string>
    <string name="default_save_options_subtitle">Select where you would like to save new verification codes.</string>
...
